--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,8 +14,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "sass": "^1.93.3",
-    "vite": "^7.1.12"
+    "@types/bootstrap": "^5.2.10",
+    "astro": "^5.0.0",
+    "sass": "^1.93.3"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
